--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>hu.uni.eku.tzs</groupId>
+    <groupId>hu.tzs.employee</groupId>
     <artifactId>backend</artifactId>
     <version>1.0.21-SNAPSHOT</version>
 
@@ -185,7 +185,7 @@
                                 <goal>repackage</goal>
                             </goals>
                             <configuration>
-                                <mainClass>hu.uni.eku.tzs.App</mainClass>
+                                <mainClass>hu.tzs.employee.App</mainClass>
                             </configuration>
                         </execution>
                     </executions>
