ci: named different ci workflows
Ref.: #4

--- a/.github/workflows/backend-quality-gate.yml
+++ b/.github/workflows/backend-quality-gate.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   quality:
+    name: 'CheckStyle'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,6 +26,7 @@ jobs:
         run: mvn -B verify
 
   build:
+    name: 'Package'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
